@@ -10,6 +10,8 @@
 
 
 Version 4.2.1
+ - Changed: Add language editor support for comments on variable definition lines (canajun2eh)
+ - Changed: Add language editor support for var. names or text enclosed in apostrophes (canajun2eh)
  - Fixed: [ 2687480 ] Language file editor wrong output when string is ";" (canajun2eh)
  - Fixed: [ 2685597 ] Missing underline for Preferred Name on Personal Details page (canajun2eh)
  - Added: [ 2684836 ] Files created with sitemap give an error on Google (borkhuis/wooc)
